...
  }

  private var sections: [HomeSection] {
    [
      HomeSection(
        id: "books",
        title: "Books",
        content: AnyView(
          HomeBooksSectionView(entry: $entry)
        )
      )
    ]
  }
...
